--- a/po-script-fu/ChangeLog
+++ b/po-script-fu/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-26  Marco Ciampa <ciampix@libero.it>
+
+	* it.po: Updated italian translation.
+
 2004-05-23  Žygimantas Beručka  <uid0@akl.lt>
 
 	* lt.po: Updated Lithuanian translation.
