2004-05-26  Sven Neumann  <sven@gimp.org>
	* app/core/core-enums.[ch]: shorter names for the gradient types
	to reduce the width of the blend tool options.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13411 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
-2004-05-26    <maurits@b82017.upc-b.chello.nl>
+2004-05-26  Sven Neumann  <sven@gimp.org>
 
+	* app/core/core-enums.[ch]: shorter names for the gradient types
+	to reduce the width of the blend tool options.
 
 2004-05-26  Maurits Rijk  <m.rijk@chello.nl>
 
