--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-05-26  Maurits Rijk  <m.rijk@chello.nl>
+
+	* plug-ins/common/video.c: code clean-up. Twice as fast now.
+
+	* plug-ins/common/flarefx.c: removed timing stuff.
+
 2004-05-26  Sven Neumann  <sven@gimp.org>
 
 	* app/core/core-enums.[ch]: shorter names for the gradient types
