Inserted missing comment
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13414 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -29,9 +29,10 @@
 	* plug-ins/common/edge.c
 	* plug-ins/common/emboss.c
 	* plug-ins/common/engrave.c
-	* plug-ins/common/exchange.c: 
-	* plug-ins/common/film.c: 
-	* plug-ins/common/flarefx.c: 
+	* plug-ins/common/exchange.c 
+	* plug-ins/common/film.c
+	* plug-ins/common/flarefx.c: Use HIG capitalization style. 
+	Added GPL license in a few places. Minor code clean-up.
 
 2004-05-26  Sven Neumann  <sven@gimp.org>
 
