2004-05-27  Sven Neumann  <sven@gimp.org>
	* app/display/gimpdisplayshell-draw.c (gimp_display_shell_draw_grid):
	fixed handling of grid offsets in the grid drawing routine.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13419 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,12 @@
+2004-05-27  Sven Neumann  <sven@gimp.org>
+
+	* app/display/gimpdisplayshell-draw.c (gimp_display_shell_draw_grid):
+	fixed handling of grid offsets in the grid drawing routine.
+
 2004-05-27  Michael Natterer  <mitch@gimp.org>
 
 	* app/widgets/widgets-enums.[ch]: added enum GimpActiveColor which
-	can be one of { FOREGROUND, BACKGROUND },
+	can be one of { FOREGROUND, BACKGROUND }.
 
 	* app/widgets/Makefile.am
 	* app/widgets/gimpfgbgeditor.[ch]: new widget implementing the
