2004-05-27  Sven Neumann  <sven@gimp.org>
	* libgimpwidgets/gimppickbutton.c: applied patch from Philip
	Lafleur that fixes color picking for XInput devices (bug #143166).


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13421 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-05-27  Sven Neumann  <sven@gimp.org>
 
+	* libgimpwidgets/gimppickbutton.c: applied patch from Philip
+	Lafleur that fixes color picking for XInput devices (bug #143166).
+
+2004-05-27  Sven Neumann  <sven@gimp.org>
+
 	* app/display/gimpdisplayshell-draw.c (gimp_display_shell_draw_grid):
 	fixed handling of grid offsets in the grid drawing routine.
 
