--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-05-27  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/png.c (respin_cmap): handle an empty colormap.
+	Fixes bug #143009.
+
+2004-05-27  Sven Neumann  <sven@gimp.org>
+
 	* libgimpwidgets/gimppickbutton.c: applied patch from Philip
 	Lafleur that fixes color picking for XInput devices (bug #143166).
 
