2004-05-27  Michael Natterer  <mitch@gimp.org>
	* app/paint/gimp-paint.c (gimp_paint_init): register ink between
	airbrush and clone so the stroke dialog's menu of paint functions
	has the same order as the default toolbox order.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13427 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-05-27  Michael Natterer  <mitch@gimp.org>
 
+	* app/paint/gimp-paint.c (gimp_paint_init): register ink between
+	airbrush and clone so the stroke dialog's menu of paint functions
+	has the same order as the default toolbox order.
+
+2004-05-27  Michael Natterer  <mitch@gimp.org>
+
 	* app/paint/gimppaintcore.[ch]: removed enum GimpPaintCoreFlags
 	and member GimpPaintCore::flags. Added "gboolean traces_on_window"
 	to GimpPaintCoreClass (defaults to FALSE).
