--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-05-28  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/warp.c: added size groups to nicely align the
+	widgets.
+
 2004-05-27  Michael Natterer  <mitch@gimp.org>
 
 	* app/paint/gimp-paint.c (gimp_paint_init): register ink between
