--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2004-05-28  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/Lighting/lighting_ui.c: tuned dialog layout for
+	consistency.
+
 	* plug-ins/common/warp.c: added size groups to nicely align the
 	widgets.
 
