2004-05-28  Sven Neumann  <sven@gimp.org>
	* plug-ins/common/CML_explorer.c
	* plug-ins/maze/maze_face.c: added size groups.

	* plug-ins/common/sinus.c: HIG-ified.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13430 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2004-05-28  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/CML_explorer.c
+	* plug-ins/maze/maze_face.c: added size groups.
+
+	* plug-ins/common/sinus.c: HIG-ified.
+
+2004-05-28  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/Lighting/lighting_ui.c: tuned dialog layout for
 	consistency.
 
