--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+2004-05-28  Michael Natterer  <mitch@gimp.org>
+
+	* app/paint/gimpbrushcore.c
+	* app/paint/gimpdodgeburn.c
+	* app/paint/gimppaintcore.[ch]
+	* app/tools/gimpairbrushtool.c
+	* app/tools/gimpclonetool.c
+	* app/tools/gimpconvolvetool.c
+	* app/tools/gimpdodgeburntool.c
+	* app/tools/gimpinktool.c
+	* app/tools/gimppaintbrushtool.c
+	* app/tools/gimppenciltool.c
+	* app/tools/gimpsmudgetool.c: code review / cleanup.
+
 2004-05-28  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/common/CML_explorer.c
