2004-05-28  Sven Neumann  <sven@gimp.org>
	* app/widgets/gimppropwidgets.c: same workaround for tooltips on
	combo boxes.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13436 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-05-28  Sven Neumann  <sven@gimp.org>
 
+	* app/widgets/gimppropwidgets.c: same workaround for tooltips on
+	combo boxes.
+
+2004-05-28  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/Lighting/lighting_ui.c
 	* plug-ins/MapObject/mapobject_ui.c
 	* plug-ins/common/warp.c
