2004-05-28  Michael Natterer  <mitch@gimp.org>
	* app/widgets/gimppreview.c (gimp_preview_button_press_event):
	don't invoke the popup preview if there is no viewable.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13437 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-05-28  Michael Natterer  <mitch@gimp.org>
+
+	* app/widgets/gimppreview.c (gimp_preview_button_press_event):
+	don't invoke the popup preview if there is no viewable.
+
 2004-05-28  Sven Neumann  <sven@gimp.org>
 
 	* app/widgets/gimppropwidgets.c: same workaround for tooltips on
