2004-05-28  Michael Natterer  <mitch@gimp.org>
	* app/widgets/gimpdnd.c (gimp_dnd_open_files): if the dropped
	stuff is a local filename (no file URI), convert it to an
	URI instead of forwarding it unmodified.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13438 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2004-05-28  Michael Natterer  <mitch@gimp.org>
 
+	* app/widgets/gimpdnd.c (gimp_dnd_open_files): if the dropped
+	stuff is a local filename (no file URI), convert it to an
+	URI instead of forwarding it unmodified.
+
+2004-05-28  Michael Natterer  <mitch@gimp.org>
+
 	* app/widgets/gimppreview.c (gimp_preview_button_press_event):
 	don't invoke the popup preview if there is no viewable.
 
