2004-05-28  Andras Timar  <timar@gnome.hu>
	* Makefile.am (tips_POFILES): added hu.po (Hungarian).
	* hu.po: Added Hungarian translation


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13440 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/tips/ChangeLog
+++ b/tips/ChangeLog
@@ -1,3 +1,8 @@
+2004-05-28  Andras Timar  <timar@gnome.hu>
+
+	* Makefile.am (tips_POFILES): added hu.po (Hungarian).
+	* hu.po: Added Hungarian translation
+
 2004-05-25  Sven Neumann  <sven@gimp.org>
 
 	* gimp-tips.xml.in: applied a patch graciously provided by "biroa"
